unpackaged/main/default/objects/Clinical_Trial_Patient__c/Clinical_Trial_Patient__c.object-meta.xml
<CustomObject>
    <label>Clinical Trial Patient</label>
    <nameField>
        <displayFormat>CTPID-{0000}</displayFormat>
        <label>Clinical Trial Patient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trial Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>