unpackaged/main/default/objects/Clinical_Trial_Patient__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clinical Trial Patients</relationshipLabel>
    <relationshipName>Clinical_Trial_Patients</relationshipName>
    <type>Lookup</type>
</CustomField>