unpackaged/main/default/objects/Clinical_Trial_Patient__c/fields/Clinical_Trial_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Name__c</fullName>
    <formula>Clinical_Trial__r.Brief_Title__c</formula>
    <label>Clinical Trial Name</label>
    <type>Text</type>
</CustomField>